--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,20 @@ body{
     font-family: 'Press Start 2P', cursive;
 }
 
-button{
-   width: 60px;
-   height: 60px;
+button, label{
+   background-color: #393e46;
+   width: 100%;
+   height: 100%;
+   font-size: 45px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   border: 2px solid black;
+}
 
+
+button:hover{
+    background-color: #515964;
 }
 
 ul{
@@ -24,12 +34,11 @@ ul{
     list-style: none;
 }
 
+
 li{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 50px;
-    height: 50px;
+   width: 80px;
+   height: 70px;
+   border: 0;
 }
 
 /*top portion of page*/
@@ -62,10 +71,10 @@ li{
 }
 
 .player-container{
+    background-color: #393e46;
     border-radius: 8px;
     width: 400px;
     height: 175px;
-    border: 2px solid black;
     padding: 15px;
     margin: 20px 20px;
     display: flex;
@@ -80,15 +89,3 @@ li{
     gap:10px;
 
 }
-.rock-btn{
-    background-image: url(./images/rock.png)
-}
-
-.choice-icon{
-    background: white;
-    width: 40px;
-    height: 40px;
-}
-
-
-
