added black border to the player containers

--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ li{
 
 .player-container{
     background-color: #393e46;
+    border: 2px solid black;
     border-radius: 8px;
     width: 400px;
     height: 175px;
