--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,10 @@ li, label{
    height: 70px;
 }
 
+main{
+    padding: 0 20px;
+}
+
 /*top portion of page*/
 .game-header{
     display: flex;
@@ -120,5 +124,13 @@ li, label{
     gap: 15px;
 }
 
+.play-again{
+    width: 175px;
+    height: 100px;
+    padding: 10px;
+    font-size: 24px;
+    border-radius: 8px;
+    color: #ddd;
+}
 
 
